Rollforward cl/120377224
For all rule based configs, general wildcards ( "*" and "google.*" ) will not shadow system methods/elements like google.discovery.* and google.protobuf.*, i.e. discovery rules will only be changed by selector starting with "google.discovery".

Design doc: https://docs.google.com/document/d/1dtEqhMQunas5gV48JB6QmzHHa3TsS1sTVJAfMDo-eiI/edit#heading=h.r186sx3ohllz

Global presubmit looks good: https://test.corp.google.com/ui#id=OCL:133646488:BASE:145556508:1485364745798:b672e39

-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=145631935
